feat: add path /testbed/productizers/user-profile
