# openapi/openapi.yml
@@ -87,6 +87,32 @@ paths:
                   summary: JSON example
                   value: Loading...
                   externalValue: "https://raw.githubusercontent.com/Virtual-Finland/definitions/main/DataProducts/test/lassipatanen/Job/JobPosting.json"
+  /testbed/productizers/user-profile:
+    post:
+      operationId: user-profile
+      requestBody:
+        description: The user profile query
+        content:
+          application/json:
+            schema:
+              type: object
+            examples:
+              success:
+                summary: JSON example
+                value: Loading...
+                externalValue: "https://raw.githubusercontent.com/Virtual-Finland/definitions/main/DataProducts/test/lassipatanen/User/Profile.json"
+      responses:
+        "200":
+          description: The user profile response
+          content:
+            application/json:
+              schema:
+                type: object
+              examples:
+                success:
+                  summary: JSON example
+                  value: Loading...
+                  externalValue: "https://raw.githubusercontent.com/Virtual-Finland/definitions/main/DataProducts/test/lassipatanen/User/Profile.json"
 components:
   schemas:
     ProxyRequestInput:
